remove Thread.stop()s